Rename the blog

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://jingyuan-wang.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: You are the CSS to my HTML
+subtitle: 主要是一些翻译，没了
+author: Jingyuan Wang
 simple_search: https://www.google.com/search
 description:
 
