--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://jingyuan-wang.github.io
 title: You are the CSS to my HTML
-subtitle: 主要是一些翻译，没了
+subtitle: 杂·念
 author: Jingyuan Wang
 simple_search: https://www.google.com/search
 description:
