--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # ----------------------- #
 
 url: http://jingyuan-wang.github.io
-title: Thoughts
+title: Tough·Works
 subtitle: 杂·念
 author: Jingyuan Wang
 simple_search: https://www.google.com/search
